--- a/content/lang/manifest.json
+++ b/content/lang/manifest.json
@@ -9,8 +9,11 @@
     "ja.json": {
       "version": 1,
       "description": "Japanese language strings"
+    },
+    "de.json": {
+      "version": 1,
+      "description": "German language strings"
     }
   }
 
 }
-
