--- a/content/lang/ja.json
+++ b/content/lang/ja.json
@@ -1,4 +1,5 @@
 {
+  "_language_name": "日本語",
   "chat_title": "🗨️ {name}との会話",
   "audio_replay_label": "🔁 過去の返事を再生",
   "play_button": "▶️ 再生",
@@ -60,4 +61,5 @@
   "tts_service_label": "TTSサービス"
 
 }
+
 
