--- a/content/lang/manifest.json
+++ b/content/lang/manifest.json
@@ -3,17 +3,18 @@
   "last_updated": "2025-08-22T10:00:00Z",
   "files": {
     "en.json": {
-      "version": 1.0,
+      "version": "1.0",
       "description": "English language strings"
     },
     "ja.json": {
-      "version": 1.0,
+      "version": "1.1",,
       "description": "Japanese language strings"
     },
     "de.json": {
-      "version": 1.0,
+      "version": "1.0",,
       "description": "German language strings"
     }
   }
 }
+
 
