--- a/content/lang/manifest.json
+++ b/content/lang/manifest.json
@@ -7,14 +7,12 @@
       "description": "English language strings"
     },
     "ja.json": {
-      "version": "1.1",,
+      "version": "1.1",
       "description": "Japanese language strings"
     },
     "de.json": {
-      "version": "1.0",,
+      "version": "1.0",
       "description": "German language strings"
     }
   }
 }
-
-
