--- a/content/lang/ja.json
+++ b/content/lang/ja.json
@@ -27,11 +27,11 @@
   "select_tts_service": "TTSサービスを選択",
   "api_key_warning": "⚠ 下にスクロールして、ページ下部の🔐マークから{service} APIキーを設定してください",
   "gemini_input_label": "Google Gemini APIキー",
-  "gemini_input_placeholder": "AIzaで始まるAPIキーを入力してください",
+  "gemini_input_placeholder": "{key_prefix}で始まるAPIキーを入力してください",
   "gemini_explanation": "※ このプログラムでGoogleのGeminiサービスを利用するには、Google Gemini APIキーが必要です。すべての処理はローカルで行われ、APIキーはどこにも保存されません。<br>**重要：** Google AI Studioで作成後、APIキーは一度しか表示されないため、安全な場所に必ず保存してください。",
   "gemini_instructions": "**Google Gemini APIキーの取得方法：**\n\n1. <a href=\"https://console.cloud.google.com/projectcreate\" target=\"_blank\" rel=\"noopener noreferrer\">Google Cloud Console – プロジェクト作成</a> にアクセス\n2. Googleアカウントでログイン\n3. プロジェクト名を入力し、**作成** をクリック\n4. プロジェクトが作成されたら、Google Cloud Console の上部バーでそのプロジェクトが選択されていることを確認\n5. <a href=\"https://aistudio.google.com/app/apikey\" target=\"_blank\" rel=\"noopener noreferrer\">Google AI Studio</a> にアクセス\n6. 「＋ 作成」をクリック\n7. 作成したプロジェクトを選択\n8. **既存のプロジェクトでAPIキーを作成** をクリック\n9. 新しいAPIキーをコピーし、上の入力欄に貼り付けてください",
   "elevenlabs_input_label": "ElevenLabs APIキー",
-  "elevenlabs_input_placeholder": "sk_で始まるAPIキーを入力してください",
+  "elevenlabs_input_placeholder": "{key_prefix}で始まるAPIキーを入力してください",
   "elevenlabs_explanation": "※ ElevenLabsの高品質音声合成を使用するにはAPIキーが必要です。すべての処理はローカルで行われ、APIキーはどこにも保存されません。<br>**重要：** ElevenLabsで作成後、APIキーは一度しか表示されないため、安全な場所に必ず保存してください。",
   "elevenlabs_instructions": "**ElevenLabs APIキーの取得方法：**\n\n1. <a href=\"https://elevenlabs.io/app/settings/api-keys\" target=\"_blank\" rel=\"noopener noreferrer\">ElevenLabs</a>にアクセス\n2. アカウントを作成またはログイン\n3. 「Create API Key」をクリック\n4. APIキーの権限を「Text to Speech」と「Voices (Read Only)」のみに設定してください\n5. 「Create」をクリック\n6. 新しいAPIキーをコピーし、上の入力欄に貼り付けてください",
   "coqui_input_label": "Coqui AI APIキー",
