--- a/content/lang/zh.json
+++ b/content/lang/zh.json
@@ -27,11 +27,11 @@
   "select_tts_service": "选择 TTS 服务",
   "api_key_warning": "⚠ 请向下滚动到页面底部的 🔐 来设置您的 {service} 密钥",
   "gemini_input_label": "Google Gemini API 密钥",
-  "gemini_input_placeholder": "请输入以 AIza 开头的 API 密钥",
+  "gemini_input_placeholder": "请输入以 {key_prefix} 开头的 API 密钥",
   "gemini_explanation": "※ 需要 Google Gemini API 密钥以便本程序访问 Google 的 Gemini 服务。所有处理均在本地完成，API 密钥不会被永久存储。<br>**重要：** 请妥善保存您的 API 密钥——在 Google AI Studio 创建后将无法再次查看。",
   "gemini_instructions": "**如何获取 Google Gemini API 密钥：**\n\n1. 访问 <a href=\"https://console.cloud.google.com/projectcreate\" target=\"_blank\" rel=\"noopener noreferrer\">Google Cloud Console – 创建项目</a>\n2. 使用 Google 帐号登录\n3. 输入项目名称并点击 **创建**\n4. 项目创建完成后，请确保它已在 Google Cloud Console 顶部栏中被选中\n5. 访问 <a href=\"https://aistudio.google.com/app/apikey\" target=\"_blank\" rel=\"noopener noreferrer\">Google AI Studio</a>\n6. 点击“＋ 创建 API 密钥”\n7. 选择您创建的项目\n8. 点击 **在现有项目中创建 API 密钥**\n9. 复制新的 API 密钥并粘贴到上方输入框",
   "elevenlabs_input_label": "ElevenLabs API 密钥",
-  "elevenlabs_input_placeholder": "请输入以 sk_ 开头的 API 密钥",
+  "elevenlabs_input_placeholder": "请输入以 {key_prefix} 开头的 API 密钥",
   "elevenlabs_explanation": "※ ElevenLabs API 密钥是生成高质量语音所必需的。所有处理均在本地完成，API 密钥不会被永久存储。<br>**重要：** 请妥善保存您的 API 密钥——在 ElevenLabs 创建后将无法再次查看。",
   "elevenlabs_instructions": "**如何获取 ElevenLabs API 密钥：**\n\n1. 访问 <a href=\"https://elevenlabs.io/app/settings/api-keys\" target=\"_blank\" rel=\"noopener noreferrer\">ElevenLabs</a>\n2. 创建账户或登录\n3. 点击“创建 API 密钥”\n4. 将权限仅设置为“Text to Speech”和“Voices (Read Only)”\n5. 点击“创建”\n6. 复制新的 API 密钥并粘贴到上方输入框",
   "coqui_input_label": "Coqui AI API 密钥",
