--- a/content/lang/en.json
+++ b/content/lang/en.json
@@ -28,19 +28,27 @@
   "api_key_warning": "⚠ Please scroll down to the 🔐 at the bottom to set up your {service} key",
   "gemini_input_label": "Google Gemini API Key",
   "gemini_input_placeholder": "Enter your API key starting with {key_prefix}",
+  "gemini_description": "※ Gemini is Google’s AI platform that provides advanced language and vision capabilities, enabling natural conversations, reasoning, and understanding of text, images, and other inputs.",
   "gemini_explanation": "※ A Google Gemini API key is required for this program to access Google's Gemini services. All processing is done locally and the API key is not permanently stored anywhere.<br>**Important:** Save your API key somewhere safe - you won't be able to view it again after creating it in Google AI Studio.",
+  "gemini_notice": "⚠ Some background features, such as audio input processing, use your provided Gemini API key through a trusted AI service. Your key is only used for these operations and is never stored.",
   "gemini_instructions": "**How to get a Google Gemini API Key:**\n\n1. Visit <a href=\"https://console.cloud.google.com/projectcreate\" target=\"_blank\" rel=\"noopener noreferrer\">Google Cloud Console – Create Project</a>\n2. Sign in with your Google account\n3. Enter a project name and click **Create**\n4. Once the project is created, make sure it is selected in the top bar of the Google Cloud Console\n5. Visit <a href=\"https://aistudio.google.com/app/apikey\" target=\"_blank\" rel=\"noopener noreferrer\">Google AI Studio</a>\n6. Click \"＋ Create API Key\"\n7. Select the project you created\n8. Click **Create API key in existing project**\n9. Copy the new API key and paste it in the field above",
   "elevenlabs_input_label": "ElevenLabs API Key",
   "elevenlabs_input_placeholder": "Enter your API key starting with {key_prefix}",
+  "elevenlabs_description": "ElevenLabs is an AI-powered voice platform that generates natural, lifelike speech in multiple languages and styles, making text-to-speech sound expressive and human.",
   "elevenlabs_explanation": "※ An ElevenLabs API key is required for higher quality voice synthesis。All processing is done locally and the API key is not permanently stored anywhere.<br>**Important:** Save your API key somewhere safe - you won't be able to view it again after creating it in ElevenLabs.",
+  "elevenlabs_notice": "⚠ ElevenLabs runs on a free tier with a monthly usage quota. Once this quota is reached, voice playback will stop working until the quota resets, a higher plan is used, or another TTS service is selected.",
   "elevenlabs_instructions": "**How to get an ElevenLabs API Key:**\n\n1. Visit <a href=\"https://elevenlabs.io/app/settings/api-keys\" target=\"_blank\" rel=\"noopener noreferrer\">ElevenLabs</a>\n2. Create an account or log in\n3. Click \"Create API Key\"\n4. Set the key permissions to 'Text to Speech' and 'Voices (Read Only)' only\n5. Click 'Create'\n6. Copy the new API key and paste it in the field above",
   "coqui_input_label": "Coqui AI API Key",
   "coqui_input_placeholder": "API key cannot be entered.",
-  "coqui_explanation": "※ Coqui is a service specializing in simple text-to-speech. While it cannot adjust for advanced emotional expression or voice styles, it can be used with ease.",
+  "coqui_description": "※ Coqui is a service specializing in simple text-to-speech. While it cannot adjust for advanced emotional expression or voice styles, it can be used with ease.",
+  "coqui_explanation": "",
   "coqui_instructions": "This service does not require API key registration. You can use it as is.",
+  "coqui_notice": "",
   "sbv2_input_label": "Style-BertVITS2 API Key",
   "sbv2_input_placeholder": "API key cannot be entered.",
-  "sbv2_explanation": "※ Style-BertVITS2 is a text-to-speech service specialized for Japanese that reads the emotion from the text and automatically adjusts the voice's tone. Because it performs advanced processing, generating the audio may take some time.",
+  "sbv2_description": "※ Style-BertVITS2 is a text-to-speech service specialized for Japanese that reads the emotion from the text and automatically adjusts the voice's tone.",
+  "sbv2_explanation": "",
+  "sbv2_notice": "⚠ Because Style-BertVITS2 performs advanced processing, generating audio may take some time.",
   "sbv2_instructions": "This service does not require API key registration. You can use it as is.",
   "api_key_status_active": "✅ Status: Active",
   "api_key_status_invalid_key": "❌ Status: Invalid API key",
