--- a/content/lang/ja.json
+++ b/content/lang/ja.json
@@ -28,19 +28,27 @@
   "api_key_warning": "⚠ 下にスクロールして、ページ下部の🔐マークから{service} APIキーを設定してください",
   "gemini_input_label": "Google Gemini APIキー",
   "gemini_input_placeholder": "{key_prefix}で始まるAPIキーを入力してください",
+  "gemini_description": "Gemini は、高度な言語や視覚能力を備えた Google の AI プラットフォームです。自然な会話、推論、そしてテキスト、画像、その他の入力内容を理解することができます。",
   "gemini_explanation": "※ このプログラムでGoogleのGeminiサービスを利用するには、Google Gemini APIキーが必要です。すべての処理はローカルで行われ、APIキーはどこにも保存されません。<br>**重要：** Google AI Studioで作成後、APIキーは一度しか表示されないため、安全な場所に必ず保存してください。",
+  "gemini_notice": "⚠ 音声入力処理など、一部のバックグラウンド機能では、信頼できる AI サービスを通じて、お客様が提供する Gemini API キーが使用されます。お客様のキーはこれらの操作にのみ使用され、保存されることはありません。",
   "gemini_instructions": "**Google Gemini APIキーの取得方法：**\n\n1. <a href=\"https://console.cloud.google.com/projectcreate\" target=\"_blank\" rel=\"noopener noreferrer\">Google Cloud Console – プロジェクト作成</a> にアクセス\n2. Googleアカウントでログイン\n3. プロジェクト名を入力し、**作成** をクリック\n4. プロジェクトが作成されたら、Google Cloud Console の上部バーでそのプロジェクトが選択されていることを確認\n5. <a href=\"https://aistudio.google.com/app/apikey\" target=\"_blank\" rel=\"noopener noreferrer\">Google AI Studio</a> にアクセス\n6. 「＋ 作成」をクリック\n7. 作成したプロジェクトを選択\n8. **既存のプロジェクトでAPIキーを作成** をクリック\n9. 新しいAPIキーをコピーし、上の入力欄に貼り付けてください",
   "elevenlabs_input_label": "ElevenLabs APIキー",
   "elevenlabs_input_placeholder": "{key_prefix}で始まるAPIキーを入力してください",
+  "elevenlabs_description": "ElevenLabs は、複数の言語やスタイルで自然で人間らしい音声を生成する AI 音声プラットフォームです。テキストを感情豊かに、まるで人間が話しているかのように読み上げます。",
   "elevenlabs_explanation": "※ ElevenLabsの高品質音声合成を使用するにはAPIキーが必要です。すべての処理はローカルで行われ、APIキーはどこにも保存されません。<br>**重要：** ElevenLabsで作成後、APIキーは一度しか表示されないため、安全な場所に必ず保存してください。",
+  "elevenlabs_notice": "⚠ ElevenLabs は無料プランで月間の利用制限があります。制限に達すると、利用制限がリセットされるか、上位プランにアップグレードするか、または別の TTS サービスを選択するまで音声再生は停止します。",
   "elevenlabs_instructions": "**ElevenLabs APIキーの取得方法：**\n\n1. <a href=\"https://elevenlabs.io/app/settings/api-keys\" target=\"_blank\" rel=\"noopener noreferrer\">ElevenLabs</a>にアクセス\n2. アカウントを作成またはログイン\n3. 「Create API Key」をクリック\n4. APIキーの権限を「Text to Speech」と「Voices (Read Only)」のみに設定してください\n5. 「Create」をクリック\n6. 新しいAPIキーをコピーし、上の入力欄に貼り付けてください",
   "coqui_input_label": "Coqui AI APIキー",
   "coqui_input_placeholder": "APIキーは入力できません",
-  "coqui_explanation": "※ Coquiは、シンプルな音声合成に特化したサービスです。高度な感情表現や声のスタイル調整はできませんが、手軽に利用できます。",
+  "coqui_description": "※ Coquiは、シンプルな音声合成に特化したサービスです。高度な感情表現や声のスタイル調整はできませんが、手軽に利用できます。",
+  "coqui_explanation": "",
   "coqui_instructions": "このサービスはAPIキーの登録は不要です。そのままご利用いただけます。",
+  "coqui_notice": "",
   "sbv2_input_label": "Style-BertVITS2 APIキー",
   "sbv2_input_placeholder": "APIキーは入力できません",
-  "sbv2_explanation": "※ Style-BertVITS2は、テキストの内容から感情を読み取り、声のトーンを自動で調整する、日本語に特化した音声合成サービスです。高度な処理を行うため、音声の生成には時間がかかる場合があります。",
+  "sbv2_description": "※ Style-BertVITS2は、テキストの内容から感情を読み取り、声のトーンを自動で調整する、日本語に特化した音声合成サービスです。",
+  "sbv2_explanation": "",
+  "sbv2_notice": "高度な処理を行うため、音声の生成には時間がかかる場合があります。",
   "sbv2_instructions": "このサービスはAPIキーの登録は不要です。そのままご利用いただけます。",
   "api_key_status_active": "✅ ステータス：有効",
   "api_key_status_invalid_key": "❌ ステータス：無効なAPIキー",
