--- a/content/lang/de.json
+++ b/content/lang/de.json
@@ -28,19 +28,27 @@
   "api_key_warning": "⚠ Bitte scrollen Sie nach unten zum 🔐 am Ende, um Ihren {service}-Schlüssel einzurichten",
   "gemini_input_label": "Google Gemini API-Schlüssel",
   "gemini_input_placeholder": "Geben Sie Ihren API-Schlüssel beginnend mit {key_prefix} ein",
+  "gemini_description": "※ Gemini ist Googles KI-Plattform, die erweiterte Sprach- und Sehfähigkeiten bietet und natürliche Gespräche, logisches Denken und das Verstehen von Texten, Bildern und anderen Eingaben ermöglicht.",
   "gemini_explanation": "※ Ein Google Gemini API-Schlüssel ist erforderlich, damit dieses Programm auf die Google Gemini-Dienste zugreifen kann. Die gesamte Verarbeitung erfolgt lokal und der API-Schlüssel wird nirgendwo dauerhaft gespeichert.<br>**Wichtig:** Speichern Sie Ihren API-Schlüssel an einem sicheren Ort – Sie können ihn nach der Erstellung in Google AI Studio nicht mehr einsehen.",
+  "gemini_notice": "⚠ Einige Hintergrundfunktionen, wie die Audioeingabeverarbeitung, nutzen Ihren bereitgestellten Gemini API-Schlüssel über einen vertrauenswürdigen KI-Dienst. Ihr Schlüssel wird nur für diese Operationen verwendet und niemals gespeichert.",
   "gemini_instructions": "**So erhalten Sie einen Google Gemini API-Schlüssel:**\n\n1. Besuchen Sie <a href=\"https://console.cloud.google.com/projectcreate\" target=\"_blank\" rel=\"noopener noreferrer\">Google Cloud Console – Projekt erstellen</a>\n2. Melden Sie sich mit Ihrem Google-Konto an\n3. Geben Sie einen Projektnamen ein und klicken Sie auf **Erstellen**\n4. Stellen Sie sicher, dass das Projekt in der oberen Leiste der Google Cloud Console ausgewählt ist\n5. Besuchen Sie <a href=\"https://aistudio.google.com/app/apikey\" target=\"_blank\" rel=\"noopener noreferrer\">Google AI Studio</a>\n6. Klicken Sie auf „＋ API-Schlüssel erstellen“\n7. Wählen Sie das von Ihnen erstellte Projekt aus\n8. Klicken Sie auf **API-Schlüssel im bestehenden Projekt erstellen**\n9. Kopieren Sie den neuen API-Schlüssel und fügen Sie ihn oben in das Feld ein",
   "elevenlabs_input_label": "ElevenLabs API-Schlüssel",
   "elevenlabs_input_placeholder": "Geben Sie Ihren API-Schlüssel beginnend mit {key_prefix} ein",
+  "elevenlabs_description": "※ ElevenLabs ist eine KI-basierte Sprachplattform, die natürliche, lebensechte Sprache in mehreren Sprachen und Stilen generiert und Text-zu-Sprache ausdrucksstark und menschlich klingen lässt.",
   "elevenlabs_explanation": "※ Ein ElevenLabs API-Schlüssel ist erforderlich für eine hochwertigere Sprachausgabe. Die gesamte Verarbeitung erfolgt lokal und der API-Schlüssel wird nirgendwo dauerhaft gespeichert.<br>**Wichtig:** Speichern Sie Ihren API-Schlüssel an einem sicheren Ort – Sie können ihn nach der Erstellung in ElevenLabs nicht mehr einsehen.",
+  "elevenlabs_notice": "⚠ ElevenLabs läuft auf einem kostenlosen Kontingent mit einem monatlichen Nutzungslimit. Sobald dieses Limit erreicht ist, funktioniert die Sprachwiedergabe nicht mehr, bis das Limit zurückgesetzt wird, ein höherer Plan verwendet oder ein anderer TTS-Dienst ausgewählt wird.",
   "elevenlabs_instructions": "**So erhalten Sie einen ElevenLabs API-Schlüssel:**\n\n1. Besuchen Sie <a href=\"https://elevenlabs.io/app/settings/api-keys\" target=\"_blank\" rel=\"noopener noreferrer\">ElevenLabs</a>\n2. Erstellen Sie ein Konto oder melden Sie sich an\n3. Klicken Sie auf „API-Schlüssel erstellen“\n4. Setzen Sie die Schlüsselberechtigungen nur auf „Text to Speech“ und „Voices (Read Only)“\n5. Klicken Sie auf „Erstellen“\n6. Kopieren Sie den neuen API-Schlüssel und fügen Sie ihn oben in das Feld ein",
   "coqui_input_label": "Coqui AI API-Schlüssel",
   "coqui_input_placeholder": "API-Schlüssel kann nicht eingegeben werden.",
-  "coqui_explanation": "※ Coqui ist ein Dienst, der sich auf einfache Sprachausgabe spezialisiert hat. Obwohl er keine fortgeschrittene emotionale Ausdrucksweise oder Stimmstile anpassen kann, ist er sehr einfach zu verwenden.",
+  "coqui_description": "※ Coqui ist ein Dienst, der sich auf einfache Text-zu-Sprache-Umwandlung spezialisiert hat. Er kann keine fortgeschrittenen emotionalen Ausdrücke oder Sprachstile anpassen, ist aber einfach zu bedienen.",
+  "coqui_explanation": "",
+  "coqui_notice": "",
   "coqui_instructions": "Für diesen Dienst ist keine API-Schlüsselregistrierung erforderlich. Sie können ihn sofort nutzen.",
   "sbv2_input_label": "Style-BertVITS2 API-Schlüssel",
   "sbv2_input_placeholder": "API-Schlüssel kann nicht eingegeben werden.",
-  "sbv2_explanation": "※ Style-BertVITS2 ist ein auf Japanisch spezialisierter Sprachausgabe-Dienst, der Emotionen aus dem Text liest und automatisch den Ton der Stimme anpasst. Da er fortschrittliche Verarbeitung durchführt, kann die Audiogenerierung etwas Zeit in Anspruch nehmen.",
+  "sbv2_description": "※ Style-BertVITS2 ist ein auf Japanisch spezialisierter Text-zu-Sprache-Dienst, der die Emotion aus dem Text liest und den Tonfall der Stimme automatisch anpasst.",
+  "sbv2_explanation": "",
+  "sbv2_notice": "⚠ Da Style-BertVITS2 fortschrittliche Verarbeitungsschritte durchführt, kann die Erzeugung von Audio einige Zeit in Anspruch nehmen.",
   "sbv2_instructions": "Für diesen Dienst ist keine API-Schlüsselregistrierung erforderlich. Sie können ihn sofort nutzen.",
   "api_key_status_active": "✅ Status: Aktiv",
   "api_key_status_invalid_key": "❌ Status: Ungültiger API-Schlüssel",
