--- a/content/lang/de.json
+++ b/content/lang/de.json
@@ -50,6 +50,12 @@
   "sbv2_explanation": "",
   "sbv2_notice": "⚠ Da Style-BertVITS2 fortschrittliche Verarbeitungsschritte durchführt, kann die Erzeugung von Audio einige Zeit in Anspruch nehmen.",
   "sbv2_instructions": "Für diesen Dienst ist keine API-Schlüsselregistrierung erforderlich. Sie können ihn sofort nutzen.",
+  "voicevox_input_label": "VoiceVox API-Schlüssel",
+  "voicevox_input_placeholder": "API-Schlüssel kann nicht eingegeben werden.",
+  "voicevox_description": "VoiceVox ist eine kostenlose Software für hochwertige japanische Sprachausgabe. Sie bietet verschiedene Charakterstimmen und ermöglicht es jedem, natürlich klingende und ausdrucksstarke Sprache zu erzeugen.",
+  "voicevox_explanation": "",
+  "voicevox_notice": "",
+  "voicevox_instructions": "Für diesen Dienst ist keine API-Schlüsselregistrierung erforderlich. Sie können ihn sofort nutzen.",
   "api_key_status_active": "✅ Status: Aktiv",
   "api_key_status_invalid_key": "❌ Status: Ungültiger API-Schlüssel",
   "api_key_status_invalid_format": "❌ Status: Ungültiges Format",
