--- a/content/lang/en.json
+++ b/content/lang/en.json
@@ -34,7 +34,7 @@
   "gemini_instructions": "**How to get a Google Gemini API Key:**\n\n1. Visit <a href=\"https://console.cloud.google.com/projectcreate\" target=\"_blank\" rel=\"noopener noreferrer\">Google Cloud Console – Create Project</a>\n2. Sign in with your Google account\n3. Enter a project name and click **Create**\n4. Once the project is created, make sure it is selected in the top bar of the Google Cloud Console\n5. Visit <a href=\"https://aistudio.google.com/app/apikey\" target=\"_blank\" rel=\"noopener noreferrer\">Google AI Studio</a>\n6. Click \"＋ Create API Key\"\n7. Select the project you created\n8. Click **Create API key in existing project**\n9. Copy the new API key and paste it in the field above",
   "elevenlabs_input_label": "ElevenLabs API Key",
   "elevenlabs_input_placeholder": "Enter your API key starting with {key_prefix}",
-  "elevenlabs_description": "※ ElevenLabs is an AI-powered voice platform that generates natural, lifelike speech in multiple languages and styles, making text-to-speech sound expressive and human.",
+  "elevenlabs_description": "※ ElevenLabs is an AI-powered voice platform that generates natural, life-like speech in multiple languages and styles, making text-to-speech sound expressive and human.",
   "elevenlabs_explanation": "※ An ElevenLabs API key is required for higher quality voice synthesis。All processing is done locally and the API key is not permanently stored anywhere.<br>**Important:** Save your API key somewhere safe - you won't be able to view it again after creating it in ElevenLabs.",
   "elevenlabs_notice": "⚠ ElevenLabs runs on a free tier with a monthly usage quota. Once this quota is reached, voice playback will stop working until the quota resets, a higher plan is used, or another TTS service is selected.",
   "elevenlabs_instructions": "**How to get an ElevenLabs API Key:**\n\n1. Visit <a href=\"https://elevenlabs.io/app/settings/api-keys\" target=\"_blank\" rel=\"noopener noreferrer\">ElevenLabs</a>\n2. Create an account or log in\n3. Click \"Create API Key\"\n4. Set the key permissions to 'Text to Speech' and 'Voices (Read Only)' only\n5. Click 'Create'\n6. Copy the new API key and paste it in the field above",
@@ -74,3 +74,4 @@
   "elevenlabs_option": "ElevenLabs",
   "tts_service_label": "Text-to-Speech Service"
 }
+
