--- a/content/lang/de.json
+++ b/content/lang/de.json
@@ -70,6 +70,12 @@
   "confirm_shutdown": "Ja",
   "cancel_shutdown": "Abbrechen",
   "shutting_down": "Server wird heruntergefahren…",
+  "check_updates": "🔄 Nach Updates suchen",
+  "checking_icon": "⏳ Überprüfung läuft...",
+  "checking_markdown": "Es wird nach Updates gesucht...",
+  "up_to_date": "✅ Bereits auf dem neuesten Stand",
+  "updated_files": "✅ Aktualisiert: {files}",
+  "failed_update": "| ⚠️ {total_failed} Dateien fehlgeschlagen"
   "gemini_option": "Google Gemini",
   "elevenlabs_option": "ElevenLabs",
   "tts_service_label": "Text-to-Speech-Dienst"
