--- a/content/lang/ja.json
+++ b/content/lang/ja.json
@@ -70,6 +70,12 @@
   "confirm_shutdown": "はい",
   "cancel_shutdown": "キャンセル",
   "shutting_down": "サーバーがシャットダウンしています…",
+  "check_updates": "🔄 アップデートを確認",
+  "checking_icon": "⏳ 確認中...",
+  "checking_markdown": "アップデートを確認しています...",
+  "up_to_date": "✅ 最新の状態です",
+  "updated_files": "✅ 更新済み: {files}",
+  "failed_update": "| ⚠️ {total_failed} 件のファイル更新に失敗しました"
   "gemini_option": "Google Gemini",
   "elevenlabs_option": "ElevenLabs",
   "tts_service_label": "TTSサービス"
