--- a/content/lang/en.json
+++ b/content/lang/en.json
@@ -71,11 +71,10 @@
   "cancel_shutdown": "Cancel",
   "shutting_down": "Server is shutting down…",
   "check_updates": "🔄 Check Updates",
-  "checking_icon": "⏳ Checking...",
-  "checking_markdown": "Checking for updates...",
   "up_to_date": "✅ Already up to date",
   "updated_files": "✅ Updated: {files}",
-  "failed_update": "| ⚠️ {total_failed} files failed",
+  "update_failed": "| ⚠️ {total_failed} files failed",
+  "update_failed_exception": "❌ Update check failed: {exception}",
   "gemini_option": "Google Gemini",
   "elevenlabs_option": "ElevenLabs",
   "tts_service_label": "Text-to-Speech Service"
