--- a/content/lang/ja.json
+++ b/content/lang/ja.json
@@ -71,11 +71,11 @@
   "cancel_shutdown": "キャンセル",
   "shutting_down": "サーバーがシャットダウンしています…",
   "check_updates": "🔄 アップデートを確認",
-  "checking_icon": "⏳ 確認中...",
-  "checking_markdown": "アップデートを確認しています...",
   "up_to_date": "✅ 最新の状態です",
   "updated_files": "✅ 更新済み: {files}",
-  "failed_update": "| ⚠️ {total_failed} 件のファイル更新に失敗しました"
+  "check_failed": "❌ アップデート確認に失敗しました：クラウド同期が設定されていません"
+  "update_failed": "| ⚠️ {total_failed} 件のファイル更新に失敗しました"
+  "update_failed_exception": "❌ アップデート確認に失敗しました： {exception}",
   "gemini_option": "Google Gemini",
   "elevenlabs_option": "ElevenLabs",
   "tts_service_label": "TTSサービス"
