--- a/content/lang/de.json
+++ b/content/lang/de.json
@@ -73,10 +73,11 @@
   "check_updates": "🔄 Nach Updates suchen",
   "up_to_date": "✅ Bereits auf dem neuesten Stand",
   "updated_files": "✅ Aktualisiert: {files}",
-  "check_failed": "❌ Update-Überprüfung fehlgeschlagen: Cloud-Synchronisierung nicht konfiguriert"
+  "check_failed": "❌ Update-Überprüfung fehlgeschlagen: Cloud-Synchronisierung nicht konfiguriert",
   "update_failed": "| ⚠️ {total_failed} Dateien fehlgeschlagen",
   "update_failed_exception": "❌ Update-Überprüfung fehlgeschlagen: {exception}",
   "gemini_option": "Google Gemini",
   "elevenlabs_option": "ElevenLabs",
   "tts_service_label": "Text-to-Speech-Dienst"
 }
+
